# external-dns-technitium-webhook

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bandit-report.json  bandit.yml  coverage.json  docker-compose.yml  pyproject.toml  sonar-project.properties  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SECURITY_SETUP.md  WORKFLOWS.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement_runtime_password_generation.md  feature_request.md  question.md
.github/workflows/: auto-tag-on-main.yml  ci.yml  docker.yml  integration-test.yml  merge-main-to-develop.yml  nightly-chainguard-python-version.yml  release.yml  scheduled-rebuild.yml  security.yml
docs/: API.md  CICD_SECURITY.md  CONTRIBUTING.md  CREDENTIALS_SETUP.md  DEVELOPMENT.md  DNS_CLEANUP_POLICY.md  LOCAL_TESTING.md  MONITORING.md  PERFORMANCE.md  RELEASE.md  SECURITY.md  SECURITY_REVIEW.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: kubernetes.md
external_dns_technitium_webhook/: __init__.py  app_state.py  config.py  handlers.py  health.py  logging_utils.py  main.py  metrics.py  middleware.py  models.py  resilience.py  responses.py  server.py  technitium_client.py
helm/: values-webhook-example.yaml
issues/: 1.md  Enhancement_Runtime_Password_Generation_and_Integration_Test_Workflow.md
local-ci-setup/: run-integration-tests.sh  setup.sh
scripts/: check_dependencies.py  setup.py
tests/: conftest.py  test_app_state.py  test_config.py  test_handlers.py  test_health.py  test_main.py  test_middleware.py  test_models.py  test_python_version.py  test_server.py  test_technitium_client.py
tests/integration/: conftest.py  test_webhook_integration.py
tests/integration/fixtures/: init-technitium.sh
tests/integration/helm/: external-dns-values.yaml
tests/integration/k8s/: technitium-deployment.yaml
tests/unit/: conftest.py  test___init__.py  test_app_state.py  test_config.py  test_handlers.py  test_health.py  test_logging_utils.py  test_main.py  test_metrics.py  test_middleware.py  test_models.py  test_python_version.py  test_resilience.py  test_server.py  test_server_run_servers.py  test_technitium_client.py
