[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "external-dns-technitium-webhook"
version = "0.3.0"
description = "ExternalDNS webhook provider for Technitium DNS"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Derek Robson", email = "djr747@users.noreply.github.com"}
]
keywords = ["kubernetes", "external-dns", "dns", "technitium", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Bumped to releases that declare support for modern Python (>=3.8) and
    # are known to be compatible with CPython 3.13 when no upper bound
    # is present in their metadata.
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "httpx==0.28.1",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1",
    "httpx==0.28.1",
    "kubernetes==34.1.0",
    "ruff==0.14.3",
    "mypy==1.18.2",
    "pyright==1.1.407",
    "semgrep",
    "types-urllib3",
]

[project.urls]
Homepage = "https://github.com/djr747/external-dns-technitium-webhook"
Repository = "https://github.com/djr747/external-dns-technitium-webhook"
Issues = "https://github.com/djr747/external-dns-technitium-webhook/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["external_dns_technitium_webhook*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
include = ["external_dns_technitium_webhook", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
]
stubPath = ""
venvPath = "."
venv = "venv"
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportPrivateUsage = "warning"
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportUnusedCoroutine = true
reportUnusedExpression = false
reportUnnecessaryTypeIgnoreComment = false
reportMatchNotExhaustive = true
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportMissingTypeArgument = false

# Ignore unused warnings for FastAPI route handlers
[[tool.pyright.executionEnvironments]]
root = "external_dns_technitium_webhook"
extraPaths = []
reportUnusedFunction = false

# Less strict type checking for tests
[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = []
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportMissingImports = false
reportPrivateUsage = false
reportUnusedFunction = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-m", "not integration",  # Skip integration tests by default (run with -m integration or -m "" to include them)
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
filterwarnings = [
    "ignore::RuntimeWarning",
    # Ignore deprecation warnings from external dependencies (uvicorn using websockets.legacy)
    # This is not our code; waiting for uvicorn to update to websockets.asyncio
    "ignore:.*websockets.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["external_dns_technitium_webhook"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 95

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]
